crates/rome_js_formatter/tests/specs/prettier/js/babel-plugins/do-expressions.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: do-expressions.js

---
# Input
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-do-expressions

let a = do {
  if(x > 10) {
    'big';
  } else {
    'small';
  }
};
// is equivalent to:
let a = x > 10 ? 'big' : 'small';

```

# Output
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-do-expressions

let a =
do {
  if(x > 10) {
    'big';
  } else {
    'small';
  }
};
// is equivalent to:
let a = x > 10 ? "big" : "small";

```

# Errors
```
error[SyntaxError]: expected an expression, or an assignment but instead found 'do'
  ┌─ do-expressions.js:3:9
  │
3 │ let a = do {
  │         ^^ Expected an expression, or an assignment here

error[SyntaxError]: expected `while` but instead found `;`
  ┌─ do-expressions.js:9:2
  │
9 │ };
  │  ^ unexpected


```


